# EEG_Decoding_with_DeepConvnet

./: .gitignore  README.md  pyproject.toml
src/: data_loader.py  test_run.py  visualization.py
src/neuro_deep_learning/: cnn.py  config.py  data_loader.py  dataset.py  fetch.py  generate_matrix.py  grand_average_bnci.py  grand_average_schirrmeister2017.py  logger.py  train.py  visualization.py
src/neuro_deep_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
